# ai-research-methodology

./: .gitignore  .markdownlint.yaml  .pip-licenses-allowlist  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  standard-tooling.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: ci-push.yml  ci.yml  publish.yml
ai-research-methodology/.claude-plugin/: plugin.json
ai-research-methodology/skills/research/: SKILL.md
ai-research-methodology/skills/research/output-formats/: default.md
ai-research-methodology/skills/research/prompts/: research.md
ai-research-methodology/skills/research/prompts/compiled/: evidence-extractor.md  evidence-packets.md  evidence-synthesizer.md  hypotheses.md  relevance-scorer.md  report-assembler.md  reports.md  research-input-clarified.md  result-selector.md  scorecards.md  search-designer.md  search-executor.md  search-plans.md  search-results.md  self-audit.md  self-auditor.md  source-scorer.md  synthesis.md
ai-research-methodology/standalone/: research.md
docs/: repository-standards.md  standards-and-conventions.md  tech-debt-register.md  validation.md
docs/decisions/: product-name-proposals.md
docs/design/: sub-agent-preamble.md  tooling-integration.md  workflow-architecture.md
docs/design/schemas/: README.md  research-input.example.json  research-input.schema.json
docs/specs/: execution-model.md  output-contract.md  parallelization.md  reliability-guarantees.md  research-methodology.md  state-machine.md  workflow-architecture.md
docs/specs/schemas/: README.md  research-input.schema.json
paad/pushback-reviews/: 2026-04-22-tech-debt-register-pushback.md
prompts/: common-guidelines.md
prompts/compiled/: hypothesis-generator.md  input-clarifier.md  report-assembler.md  search-executor.md  self-auditor.md  source-scorer.md
prompts/sub-agents/: hypothesis-generator.md  input-clarifier.md  search-designer.md  search-executor.md  source-scorer.md
scripts/: compile-prompts.py
scripts/dev/: audit.sh  lint.sh  test.sh  typecheck.sh  validate_local_custom.sh  validate_version.py
skills/research/: SKILL.md
skills/research/output-formats/: default.md
skills/research/prompts/: claim.md  query.md  research.md
src/ai_research_methodology/: __init__.py
src/diogenes/: __init__.py  api_client.py  cli.py  config.py  content_cache.py  events.py  logger.py  mcp_server.py  parallelize.py  pipeline.py  renderer.py  retry.py  schema_validator.py  search.py  search_providers.py  state_machine.py
src/diogenes/commands/: __init__.py  run.py
src/diogenes/prompts/sub-agents/: evidence-extractor.md  evidence-synthesizer.md  relevance-scorer.md  report-assembler.md  reports.md  result-selector.md  scorecards.md  search-plans.md  self-audit.md  self-auditor.md  source-scorer.md
src/diogenes/schemas/: archive.schema.json  clarified-input.schema.json  evidence-packets.schema.json  extracted-claims.schema.json  hypotheses.schema.json  pipeline-events.schema.json  relevance-scores.schema.json  report.schema.json  reports.schema.json  research-input.example.json  research-input.schema.json  scorecards-persisted.schema.json  scorecards.schema.json  search-plan.schema.json  search-plans.schema.json  search-results.schema.json  self-audit.schema.json  source-scorecards.schema.json  source-scorer-output.schema.json  step-output-collection.schema.json  synthesis.schema.json  usage.schema.json
standalone/: research.md
tests/: conftest.py  test_api_client.py  test_cli.py  test_commands_run.py  test_config.py  test_content_cache.py  test_dev_scripts.py  test_events.py  test_logger.py  test_mcp_server.py  test_parallelize.py  test_pipeline.py  test_renderer.py  test_retry.py  test_schema_validator.py  test_schemas.py  test_search.py  test_search_providers.py  test_state_machine.py
tests/fixtures/: sample-text-input.md
