[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diogenes"
version = "0.1.0"
description = "Diogenes — deterministic AI research coordinator for evidence-based investigation"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Phillip Moore", email = "w.phillip.moore@gmail.com" }]
requires-python = ">=3.12,<4.0"
keywords = ["research", "methodology", "fact-checking", "evidence", "ai", "anti-sycophancy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic",
    "jsonschema",
    "jinja2",
    "requests",
]

[project.urls]
Homepage = "https://github.com/wphillipmoore/ai-research-methodology"
Repository = "https://github.com/wphillipmoore/ai-research-methodology"
Issues = "https://github.com/wphillipmoore/ai-research-methodology/issues"

[project.scripts]
dio = "diogenes.cli:main"
diogenes = "diogenes.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "types-jsonschema",
    "pytest",
    "pytest-cov",
    "pip-audit",
    "pip-licenses",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diogenes = ["py.typed", "schemas/*.json"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D203",   # Prefer D211 (no blank line before class)
    "D213",   # Prefer D212 (summary on first line)
    "COM812", # Handled by Ruff formatter; avoid formatter conflicts.
]

[tool.ruff.lint.isort]
known-first-party = ["diogenes"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D1",   # Tests do not require docstrings.
    "S101", # Pytest assert style is expected.
]
"scripts/**/*.py" = [
    "D1",    # Scripts do not require docstrings.
    "T201",  # Scripts use print for user-facing output.
    "INP001", # Scripts are not a package; no __init__.py needed.
]
"src/diogenes/cli.py" = [
    "T201",   # CLI uses print for user-facing output.
    "PLC0415", # Lazy imports for subcommands are intentional.
]
"src/diogenes/commands/**/*.py" = [
    "T201",    # Command implementations use print for user-facing output.
    "PLR0915", # Command functions may exceed 50 statements.
]
"src/diogenes/pipeline.py" = [
    "T201",    # Pipeline steps print progress for user-facing output.
]
"src/diogenes/api_client.py" = [
    "PLR0913", # call_sub_agent has keyword-only params for composability.
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: integration tests requiring AI API access",
]
