[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diogenes"
version = "0.1.0"
description = "Diogenes — deterministic AI research coordinator for evidence-based investigation"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Phillip Moore", email = "w.phillip.moore@gmail.com" }]
requires-python = ">=3.14,<4.0"
keywords = ["research", "methodology", "fact-checking", "evidence", "ai", "anti-sycophancy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic",
    "jsonschema",
    "jinja2",
    "mcp",
    "requests",
    # trafilatura extracts the article body from HTML (dropping nav, headers,
    # footers, sidebars, ads). Rolling this as a regex previously produced
    # content_extracts dominated by page chrome, which the evidence-extractor
    # then "quoted" by filling in from training-data memory of the source.
    "trafilatura",
    # Pin lxml >= 6.1.0 to get the CVE-2026-41066 fix. trafilatura pulls lxml
    # in transitively; without this constraint it resolves to the vulnerable
    # 6.0.4. Safe to remove once trafilatura bumps its own floor above 6.1.0.
    "lxml>=6.1.0",
    # pypdf extracts text from PDF fetches. Academic sources (aclanthology,
    # usenix, openreview, many journal PDF alternates) serve full papers as
    # PDFs; trafilatura only handles HTML. Without pypdf we drop PDF sources
    # entirely — a major coverage gap for peer-reviewed content.
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/wphillipmoore/ai-research-methodology"
Repository = "https://github.com/wphillipmoore/ai-research-methodology"
Issues = "https://github.com/wphillipmoore/ai-research-methodology/issues"

[project.scripts]
dio = "diogenes.cli:main"
diogenes = "diogenes.cli:main"
dio-mcp = "diogenes.mcp_server:main"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "mypy",
    "types-jsonschema",
    "types-requests",
    "pytest",
    "pytest-cov",
    "pip-audit",
    "pip-licenses",
    "mcp>=1.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diogenes = ["py.typed", "schemas/*.json", "prompts/*.md", "prompts/sub-agents/*.md"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D203",   # Prefer D211 (no blank line before class)
    "D213",   # Prefer D212 (summary on first line)
    "COM812", # Handled by Ruff formatter; avoid formatter conflicts.
]

[tool.ruff.lint.isort]
known-first-party = ["diogenes"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D1",      # Tests do not require docstrings.
    "S101",    # Pytest assert style is expected.
    "S105",    # Hardcoded passwords in test fixtures are intentional.
    "S106",    # Hardcoded passwords in test fixtures are intentional.
    "S108",    # Temporary file paths in tests are fine.
    "PLR2004", # Magic values in test assertions are readable as-is.
    "PLC0415", # Deferred imports in tests are intentional (avoid circular imports).
    "SLF001",  # Tests may access private members for verification.
    "ARG001",  # Unused args in side_effect callables that must match signatures.
    "ARG002",  # Unused method args from fixtures (monkeypatch, tmp_path).
    "PT019",   # Fixture without value is fine (setup/teardown patterns).
    "PT017",   # Asserting on exception attributes is clearer than nested raises.
    "F841",    # Unused local assigned for side-effect verification.
    "RUF059",  # Unused unpacked variables from tuple returns (e.g., _, rejected).
    "RUF043",  # Regex metacharacters in match= are intentional.
    "PLR0913", # Side-effect callables must match production function signatures.
    "PLR0915", # Comprehensive fixture-based tests may have many statements.
    "ANN001",  # Side-effect callables inherit types from target function.
    "ANN202",  # Nested test helper functions do not need return annotations.
    "E741",    # Single-letter loop vars are fine in short test comprehensions.
]
"scripts/**/*.py" = [
    "D1",    # Scripts do not require docstrings.
    "T201",  # Scripts use print for user-facing output.
    "INP001", # Scripts are not a package; no __init__.py needed.
]
"src/diogenes/cli.py" = [
    "T201",   # CLI entry dispatcher prints before any run-scoped logger exists.
    "PLC0415", # Lazy imports for subcommands are intentional.
]
"src/diogenes/commands/**/*.py" = [
    "PLR0911", # Command execute() has early-return error handling per step.
    "PLR0912", # _dispatch_step branches per pipeline step.
    "PLR0913", # _dispatch_step takes context args for all handler signatures.
    "PLR0915", # Command functions may exceed 50 statements.
    "C901",    # _dispatch_step maps steps to handlers with per-step args.
    "C416",    # Dict comprehension in archive assembly is clearer than dict().
    "ANN401",  # _dispatch_step accepts Any — handlers have heterogeneous signatures.
    "G004",    # Progress-log f-strings: readability > lazy-formatting micro-perf.
]
"src/diogenes/pipeline.py" = [
    "PLR0913", # Later steps receive all prior step outputs as arguments.
    "G004",    # Progress-log f-strings: readability > lazy-formatting micro-perf.
]
"src/diogenes/api_client.py" = [
    "PLR0913", # call_sub_agent has keyword-only params for composability.
    "C901",    # _parse_json_response handles multiple extraction strategies.
    "PLR0912", # _strip_to_schema recurses through schema structure.
    "ANN401",  # _strip_to_schema and _preview accept Any — JSON data is untyped.
]
"src/diogenes/mcp_server.py" = [
    "C901",    # dio_validate_packets handles both CLI and skill output formats.
    "PLC0415", # Deferred import avoids circular dependency with pipeline.py.
]
"src/diogenes/renderer.py" = [
    "C901",    # Renderer functions handle multiple JSON schema variants.
    "PERF401", # Conditional list-building is clearer with append loops.
    "PLR0912", # Renderer branches on schema variants (CLI vs plugin).
    "PLR0913", # Renderers take many step-output args to build rich index pages.
    "PLR0915", # Markdown writers have many statements by nature.
    "TC003",   # pathlib.Path needed at runtime for type checks and operations.
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: integration tests requiring AI API access",
]

[tool.coverage.run]
branch = true
source = ["diogenes"]

[tool.coverage.report]
# Explicit exceptions to 100% coverage rule:
# - Entry-point guards (`if __name__ == "__main__":`) are standard Python idiom,
#   unreachable via import, and don't need testing.
# - MCP server main() invokes FastMCP's server.run() which blocks forever on a
#   network socket; testing it requires starting/stopping a real server process.
exclude_also = [
    'if __name__ == "__main__":',
    "def main\\(\\) -> None:\\s*\"\"\"Run the MCP server\\.\"\"\"",
    "server\\.run\\(\\)",
]
